GSWA patterns & tests fix

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -7,130 +7,130 @@
 # RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/australian-physiographic-units.ttl$
 # RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units" [R=302,NE,L]
+RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
 # RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/australian-physiographic-units/(.*).ttl$
 # RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units/brhl-cnfgrtn:$1" [R=302,NE,L]
+RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/borehole-configuration
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/borehole-configuration.ttl$
-# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration" [R=302,NE,L]
+# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/borehole-configuration/(.*).ttl$
-# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/borehole-start-point-setting
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-start-point-setting?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/borehole-start-point-setting.ttl$
-# RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting" [R=302,NE,L]
+# RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-start-point-setting?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-start-point-setting$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-start-point-setting" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-start-point-setting/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/borehole-start-point-setting/(.*).ttl$
-# RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-start-point-setting/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-start-point-setting/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-start-point-setting/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-start-point-setting/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/dmirs-offices
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmirs-offices?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/dmirs-offices.ttl$
-# RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices" [R=302,NE,L]
+# RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmirs-offices?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmirs-offices" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmirs-offices/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/dmirs-offices/(.*).ttl$
-# RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:dmirs-offices/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmirs-offices/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmirs-offices/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/gswa-collection-facilities
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:gswa-collection-facilities?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/gswa-collection-facilities.ttl$
-# RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities" [R=302,NE,L]
+# RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:gswa-collection-facilities?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/gswa-collection-facilities$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:gswa-collection-facilities" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:gswa-collection-facilities/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/gswa-collection-facilities/(.*).ttl$
-# RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:gswa-collection-facilities/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:gswa-collection-facilities/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/gswa-collection-facilities/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:gswa-collection-facilities/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/physiographic-unit-types
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/physiographic-unit-types.ttl$
-# RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types" [R=302,NE,L]
+# RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/physiographic-unit-types/(.*).ttl$
-# RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:physiographic-unit-types/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/wa-coordinate-reference-system
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-system?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/wa-coordinate-reference-system.ttl$
-# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-system?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-system" [R=302,NE,L]
+# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/wa-coordinate-reference-system/(.*).ttl$
-# RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-coordinate-reference-system/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/wa-mineral-fields-and-districts
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/wa-mineral-fields-and-districts.ttl$
-# RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts" [R=302,NE,L]
+# RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/wa-mineral-fields-and-districts/(.*).ttl$
-# RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1" [R=302,NE,L]
