--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -4,34 +4,34 @@
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/australian-physiographic-units.ttl$
-# RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units" [R=302,NE,L]
+# RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/australian-physiographic-units$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:Australian-physiographic-units" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/australian-physiographic-units/(.*).ttl$
-# RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:australian-physiographic-units/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/australian-physiographic-units/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:Australian-physiographic-units/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/borehole-configuration
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/borehole-configuration.ttl$
-# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration" [R=302,NE,L]
+# RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-configuration$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/borehole-configuration/(.*).ttl$
-# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:borehole-configuration/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-configuration/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/def:borehole-configuration/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/borehole-start-point-setting
@@ -106,17 +106,17 @@ RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/def/wa-coordinate-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/wa-coordinate-reference-systems.ttl$
 # RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/wa-coordinate-reference-system.ttl$
-# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system" [R=302,NE,L]
+RewriteRule ^/def/wa-coordinate-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
-# RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-# RewriteRule ^/def/wa-coordinate-reference-system/(.*).ttl$
-# RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1" [R=302,NE,L]
+# RewriteRule ^/def/wa-coordinate-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/wa-coordinate-reference-systems/(.*).ttl$
+# RewriteRule ^/def/wa-coordinate-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/wa-coordinate-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:wa-coordinate-reference-system/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/wa-mineral-fields-and-districts
@@ -126,11 +126,11 @@ RewriteRule ^/def/wa-coordinate-reference-system/(.*)$ "https://gswa.dev.kurrawo
 # RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/wa-mineral-fields-and-districts.ttl$
 # RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts" [R=302,NE,L]
+RewriteRule ^/def/wa-mineral-fields-and-districts$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrcts:wa-mineral-fields-and-districts" [R=302,NE,L]
 # Concept / Collection
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 # RewriteCond %{HTTP:Accept} text/turtle [NC]
 # RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 # RewriteRule ^/def/wa-mineral-fields-and-districts/(.*).ttl$
 # RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrct:wa-mineral-fields-and-districts/brhl-cnfgrtn:$1" [R=302,NE,L]
+RewriteRule ^/def/wa-mineral-fields-and-districts/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/w-mnrl-flds-nd-dstrcts:wa-mineral-fields-and-districts/ns4:$1" [R=302,NE,L]
