resource-permit-status fix

--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -459,8 +459,8 @@ RewriteRule ^/def/qld-resource-permit($|/.*)$ "https://vocabs.gsq.digital/object
 # https://linked.data.gov.au/def/qld-resource-permit-status
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/qld-resource-permit-status($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-resource-permit-status&uri=http://linked.data.gov.au/def/qld-resource-permit-status$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/qld-resource-permit-status($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-resource-permit-status&uri=http://linked.data.gov.au/def/qld-resource-permit-status$1" [R=302,NE,L]
+RewriteRule ^/def/qld-resource-permit-status($|/.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/qld-resource-permit-status$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/qld-resource-permit-status($|/.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/qld-resource-permit-status$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/qld-utm-zones
