--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -68,6 +68,23 @@ RewriteRule ^/def/dmirs-offices$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmir
 RewriteRule ^/def/dmirs-offices/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:dmirs-offices/brhl-cnfgrtn:$1" [R=302,NE,L]
 
 
+# https://linked.data.gov.au/def/geological-feature-type
+# ConceptScheme
+# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/def/geological-feature-type$ "https://gswa.dev.kurrawong.ai/v/vocab/ns1:geological-feature-type?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/geological-feature-type.ttl$
+# RewriteRule ^/def/geological-feature-type$ "https://gswa.dev.kurrawong.ai/v/vocab/ns1:geological-feature-type?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/geological-feature-type$ "https://gswa.dev.kurrawong.ai/v/vocab/ns1:geological-feature-type" [R=302,NE,L]
+# Concept / Collection
+# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/def/geological-feature-type/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns1:geological-feature-type/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/geological-feature-type/(.*).ttl$
+# RewriteRule ^/def/geological-feature-type/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns1:geological-feature-type/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/geological-feature-type/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns1:geological-feature-type/brhl-cnfgrtn:$1" [R=302,NE,L]
+
+
 # https://linked.data.gov.au/def/gswa-collection-facilities
 # ConceptScheme
 # RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -100,6 +117,24 @@ RewriteRule ^/def/physiographic-unit-types$ "https://gswa.dev.kurrawong.ai/v/voc
 # RewriteRule ^/def/physiographic-unit-types/(.*).ttl$
 # RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types/brhl-cnfgrtn:$1?_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/physiographic-unit-types/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns4:physiographic-unit-types/brhl-cnfgrtn:$1" [R=302,NE,L]
+
+
+# https://linked.data.gov.au/def/vertical-depth-reference-systems
+# ConceptScheme
+# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/def/vertical-depth-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/ns2:vertical-depth-reference-systems?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/vertical-depth-reference-systems.ttl$
+# RewriteRule ^/def/wa-coordinate-reference-system$ "https://gswa.dev.kurrawong.ai/v/vocab/ns2:vertical-depth-reference-systems?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/vertical-depth-reference-systems$ "https://gswa.dev.kurrawong.ai/v/vocab/ns2:vertical-depth-reference-systems" [R=302,NE,L]
+# Concept / Collection
+# RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+# RewriteCond %{HTTP:Accept} text/turtle [NC]
+# RewriteRule ^/def/vertical-depth-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns2:vertical-depth-reference-systems/w-crdnt-rfrnc-systm:$1?_mediatype=text/turtle" [R=302,L]
+# RewriteRule ^/def/vertical-depth-reference-systems/(.*).ttl$
+# RewriteRule ^/def/vertical-depth-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns2:vertical-depth-reference-systems/w-crdnt-rfrnc-systm:$1?_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/vertical-depth-reference-systems/(.*)$ "https://gswa.dev.kurrawong.ai/v/vocab/ns2:vertical-depth-reference-systems/w-crdnt-rfrnc-systm:$1" [R=302,NE,L]
+
 
 # https://linked.data.gov.au/def/wa-coordinate-reference-systems
 # ConceptScheme
